--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,11 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    groups:
+      minorpatch:
+        update-types:
+          - "minor"
+          - "patch"
     open-pull-requests-limit: 10
   - package-ecosystem: "github-actions"
     directory: "/"
